# chromadb_ultimate_ui

./: .gitignore  Makefile  PROJECT.md  README.md  dev.bat  docker-compose.yml
backend/: Dockerfile  pyproject.toml  seed_test_data.py
backend/app/: chroma_client.py  config.py  db.py  main.py  models.py
backend/app/routers/: collections.py  connections.py  migrate.py
backend/app/services/: migrator.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  ConnectionForm.tsx  FilterBar.tsx  FilteredDumpDialog.tsx  JobsPanel.tsx  MigratePanel.tsx  api.ts  styles.css
