[project]
name = "chroma-ultimate-ui-backend"
version = "0.1.0"
description = "DBeaver-style web UI backend for ChromaDB migration & browsing"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "chromadb>=0.5.0",
    "pydantic>=2.6",
    "cryptography>=42.0",
    "sse-starlette>=2.0",
]

[project.optional-dependencies]
dev = ["httpx>=0.27", "pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
